--- a/ind.css
+++ b/ind.css
@@ -1,7 +1,8 @@
 .formdes
 {
 	background: linear-gradient(to bottom, #6A60A7, #A091EC);
-	height: 546px;
+	
+	min-height: 100%;
 	width: 100%;
 	float: left;
 	margin-top: -4px;
