--- a/ind.css
+++ b/ind.css
@@ -47,15 +47,13 @@ html,body
 }
 #page
 {
-height:100%;
+height:83%;
 width:100%;
 }
 
 .formdes
 {
 	background: linear-gradient(to bottom, #6A60A7, #A091EC);
-	
-	min-height: 100%;
 	width: 100%;
 	float: left;
 	margin-top: -4px;
@@ -395,6 +393,11 @@ option
 	font-size: 20px;
 	margin-bottom: 7px;
 	text-shadow: -0.5px 0.5px #FFFFFF;
-
-
+}
+.loginerror
+{
+	text-align: center;;
+	font-family: arial;
+	font-size: 15px;
+	color: red;
 }
