--- a/common/css/ind.css
+++ b/common/css/ind.css
@@ -136,17 +136,16 @@ width:100%;
 }
 .articlebox
 {
-	height: 200px;
-	width: 40%;
-	margin-top: 10px;
-	margin-left: 30%;
-	border: solid 5px #7D73B1;
 
-	
-	padding: 6px;
-	font-family: cambria;
-	font-size: 14px;
-	font: bold;
+    -moz-box-sizing: border-box;
+    background: none repeat scroll 0 0 #F4F4F4;
+    border: 1px solid #D6D6D6;
+    border-radius: 2px 2px 2px 2px;
+    display: block;
+    padding: 0 15px;
+    transition: all 0.25s ease 0s;
+    width: 100%;
+	height: 200px;
 }
 .radio
 {
@@ -157,18 +156,18 @@ width:100%;
 }
 .selectRadio
 {
-	margin-left: 404px;
-	font-size: 20px;
-	color: white;
+	
+	font-size: 16px;
+	color: #888888;
 	font: bold;
-	text-shadow: 2px 2px #504683;
+	
 }
 .statusText
 {
-	margin-left: 60px;
-	font-size: 18px;
-	color: white;
-	text-shadow: 2px 2px #504683;
+	
+	font-size: 16px;
+	color: #888888;
+	
 }
 
 .in
@@ -397,11 +396,13 @@ option
 }
 .teachertable
 {
-	margin-left:96px;
+	margin-left:auto;
+	margin-right: auto;
     border-color: black;
-	border: 1px solid #7D73B1;
+	border: 1px solid #D2D6D5;
 	border-collapse: collapse;
 	text-align: center;
+
 }
 .sub
 {
